apps/ressource/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ressource-api
  namespace: ressource
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ressource-api
  template:
    metadata:
      labels:
        app: ressource-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: ressource-api
          image: ghcr.io/goon-corp/cesi-ressource-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
