apps/ressource/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ressource-api
  namespace: ressource
spec:
  selector:
    app: ressource-api
  ports:
    - port: 8080
      targetPort: 8080
